--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
 	},
 	"extra": {
 		"laravel": {
-			"providers": [ "gpaviva\\LaravelTeamsLogging\\src\\LoggerServiceProvider" ]
+			"providers": [ "gp-aviva\\LaravelTeamsLogging\\src\\LoggerServiceProvider" ]
 		}
 	}
 }
